[package]
name = "rust-evm"
version = "0.1.0"
authors = ["Oliver Flatt <oflatt@gmail.com>"]
edition = "2018"

[dependencies]
primitive-types = "0.10.1"
egg = "0.9.5"


#[dependencies.egg]
#git = "https://github.com/egraphs-good/egg"
#rev = "484fd6eec831a4078455ac47ef1172ede1b03dbf" # send sync
# rev = "116295f5c5afc58b34c732066c2e533bc4ad2ce8" # latest
# rev = "483876ffc7e38a3d1e55a1f249dcd7900093b99e" # use more precise analysis rebuild
# rev = "5d12e81a43d8eb6bfa8c29b62ba766143ba54a79" # Simplify unionfind
# rev = "e5ded849f55c735b88cc7fd8b74e111dca6685b5" # Use new rebuilding
# rev = "18e62918ed3c7b30b55a61108f19d405d6b4c3c7" # Don't use cell
# path = "../egg"
# version = "0.6"
